languages/bevy_mod_scripting_lua_derive/tests/fail/simple/invalid-output-type-custom-body.stderr
error: Did not expect contextual receiver in constructing simple proxy type
 --> tests/fail/simple/invalid-output-type-custom-body.rs:8:32
  |
8 |     fn fn_returning_proxy() -> Self {
  |                                ^^^^
